# servicemanager

./: .dockerignore  .gitignore  01-PRD_bounded_admin_data_paths.md  02-PRD_bulk_authorization_queries.md  03-PRD_bounded_account_surfaces.md  Dockerfile  IDEATION_NEW_FEATURES.md  IDEATION_PERFORMANCE.md  IDEATION_UI_UX.md  RELATORIO_SEGURANCA_DEPLOY.md  app.py  pyproject.toml  skills-lock.json
.codebase-memory/: artifact.json  graph.db.zst
.firecrawl/: scrape-academicblock.md  scrape-agent-device.md  scrape-android-agent.md  scrape-banking-linux.md  scrape-buvei-chatgpt.md  scrape-buvei-free.md  scrape-buvei-openai.md  scrape-cardwise.md  scrape-cubieserver-banking.md  scrape-droidwin-knox.md  scrape-genymotion-banking.md  scrape-getsby.md  scrape-gist-hide-banking.md  scrape-halocard-deposit.md  scrape-halocard-full.md  scrape-halocard-home.md  scrape-halocard-pricing.md  scrape-halocard-support.md  scrape-halocard.md  scrape-hide-root-guide.md  scrape-justuseapp.md  scrape-knoxpatch.md  scrape-ldplayer-fix.md  scrape-ldplayer-linux.md  scrape-stackexchange-emulator.md  scrape-triallock.md  scrape-undetectable-emulator.md  scrape-xda-bypass.md  scrape-xda-emulator.md  scrape-xda-knoxguard.md  scrape-xda-unlocked-bootloader.md  scrape-xiaoz.md  search-android-agent-control.json  search-emulator-banking.json  search-genymotion-banking.json  search-hide-root-banking.json  search-hide-unlocked-banking.json  search-hide-unlocked-bootloader.json  search-knox-bypass-bootloader.json  search-knox-unlock-state.json  (+11 more)
docker/: entrypoint.sh  gunicorn.conf.py  nginx.conf  (+1 more)
(+68 files in other folders)
