[project]
name = "service-manager"
version = "0.1.0"
description = "Service Manager"
requires-python = ">=3.12,<3.13"
dependencies = [
    "Flask==3.1.3",
    "gunicorn==26.0.0",
    "argon2-cffi==25.1.0",
    "cryptography==49.0.0",
    "pyotp==2.10.0",
    "Flask-WTF==1.3.0",
    "email-validator==2.3.0",
    "openpyxl==3.1.5",
    "qrcode==8.2",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "pip-audit==2.10.1",
]
